<resources>
    <string name="app_name">preferencesSettings</string>

    <string name="action_settings">Settings</string>
    <string name="wifi_title">WI-FI</string>
    <string name="wifi_summary">on/of Wi-Fi</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints</string>
    <string name="settings_title">Settings</string>
    <string name="main_titlte">Работа с Preferences Framework. Клик по настройкам!</string>
    <string name="pref_size">pref_size</string>
    <string name="font_size">Размер шрифта</string>
    <string name="font_size_summary">Устанавливаем новый размер шрифта</string>
    <string name="font_size_dialog_title">Введите новый размер шрифта (от 10 до 32)</string>
    <string name="pref_style">pref_style</string>
    <string name="font_style_title">Стиль для шрифта</string>
    <string name="font_style_summary">Устанавливает стиль для шрифта</string>
    <string name="font_style_dialog_title">Выберите стиль для шрифта</string>
    <string name="wifi_off">Wifi Off</string>
    <string name="wifi_on">WIFI On</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="settings_ringtone">settings_ringtone</string>
    <string name="ringtones">Ringtones</string>
    <string name="ringtones_summary">Устанавливаем мелодию для звонка</string>
    <string name="font_settings">Псевдонастройки псевдошрифта</string>
    <string name="pref_color">pref_color</string>
    <string name="font_color_title">Цвет текста</string>
    <string name="font_color_summary">Устанавливает цвет для текста</string>
    <string name="pref_color_black">pref_color_black</string>
    <string name="pref_color_blue">pref_color_blue</string>
    <string name="pref_color_red">pref_color_red</string>
    <string name="pref_color_green">pref_color_green</string>
    <string name="font_black">Черный</string>
    <string name="font_black_summary">Устанавливает черный цвет текста</string>
    <string name="font_blue">Синий</string>
    <string name="font_blue_summary">Устанавливает синий цвет текста</string>
    <string name="font_green">Зеленый</string>
    <string name="font_green_summary">Устанавливает зеленый цвет текста</string>
    <string name="font_red">Красный</string>
    <string name="font_red_summary">Устанавливает красный цвет текста</string>
</resources>
